Added github link to social media channels

--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,7 @@
             <li><a href="https://twitter.com/coderdojorealm">Twitter</a></li>
             <li><a href="https://www.facebook.com/groups/coderdojorealm/">Facebook</a></li>
             <li><a href="https://www.youtube.com/channel/UCtbvasinMF8wh6kc-W6NNjA">YouTube</a></li>
+            <li><a href="https://github.com/organizations/CoderDojoRealm">GitHub</a>
         </ul>
 
         <h3>Email</h3>
