Added the about page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation" class="active"><a href="index.html">Home</a></li>
+                <li role="presentation"><a href="about.html">About</a></li>
                 <li role="presentation"><a href="tech.html">Technologies</a></li>
                 <li role="presentation"><a href="showcase.html">Showcase</a></li>                
                 <li role="presentation"><a href="contact.html">Contact Us</a></li>
@@ -51,10 +52,10 @@
         </div>
 
         <br/><br/>
-        <div class="alert alert-warning" role="alert">The studio will be re-opening in March 2017. Stay tuned here for updates.</div>
+        <div class="alert alert-warning" role="alert">The dojo will be re-opening in March 2017. Stay tuned via our newsletter and <a href="contact.html">social media</a> for updates.</div>
         <p>
             <!-- <a class="btn btn-lg btn-default" href="#" role="button">View Schedule</a> -->
-            <a class="btn btn-lg btn-success" href="http://eepurl.com/cAlSLj" role="button">Sign up to the Newsletter</a>
+            <a class="btn btn-lg btn-success" href="http://eepurl.com/cAlSLj" role="button">Newsletter Sign-Up</a>
         </p>
     </div>
 
