--- a/showcase.html
+++ b/showcase.html
@@ -29,6 +29,7 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation"><a href="index.html">Home</a></li>
+                <li role="presentation"><a href="about.html">About</a></li>
                 <li role="presentation"><a href="tech.html">Technologies</a></li>
                 <li role="presentation" class="active"><a href="showcase.html">Showcase</a></li>                
                 <li role="presentation"><a href="contact.html">Contact Us</a></li>
