--- a/tech.html
+++ b/tech.html
@@ -29,6 +29,7 @@
         <nav>
             <ul class="nav nav-pills pull-right">
                 <li role="presentation"><a href="index.html">Home</a></li>
+                <li role="presentation"><a href="about.html">About</a></li>
                 <li role="presentation" class="active"><a href="tech.html">Technologies</a></li>
                 <li role="presentation"><a href="showcase.html">Showcase</a></li>                
                 <li role="presentation"><a href="contact.html">Contact Us</a></li>
@@ -44,7 +45,7 @@
 
     <div class="row marketing">
 
-        <h1>Technologies & Projects</h1>
+        <h1>Technologies</h1>
         <h3>Equipment</h3>
         <p>Thanks to the kind support of
             <a href="http://www.erl.vic.gov.au">Eastern Regional Libraries</a>,
