Updated the website to improve the technology section, with links and downloads for getting started guide

--- a/about.html
+++ b/about.html
@@ -53,9 +53,9 @@
         </p><p>
             The CoderDojo movement believes that an understanding of programming languages is increasingly important in the modern world, that it’s both better and easier to learn these skills early, and that nobody should be denied the opportunity to do so.
         </p>
-        <h3>CoderDojo Realm</h3>
+        <h3>How it works</h3>
         <p>
-            CoderDojo Realm is not a classroom —  it is a free, fun community of children aged 7 to 17 who
+            CoderDojo is not a classroom —  it is a free, fun community of children aged 7 to 17 who
             learn to code. The focus is on self-led learning with volunteer mentors offering assistance.
         </p><p>
             Our aim is to help our kids (called ninjas) to learn the concepts of computer programming,
@@ -66,23 +66,33 @@
             solve the problem using the internet or by asking their peers. Ninjas are encouraged
             to choose projects that are of interest to them, rather than everyone doing the same
             project.
-        </p><p>
-            Parents are encouraged to sit alongside their children, especially younger ones,
-            to learn as their child learns - this allows them to help their child take home
-            their projects and help them to continue to learn at home.
         </p>
-        <p>Thanks to the kind support of
-            <a href="http://www.erl.vic.gov.au">Eastern Regional Libraries</a>,
-            <a href="http://www.maroondah.vic.gov.au">Maroondah City Council</a>,
-            <a href="http://www.yarraranges.vic.gov.au">Yarra Ranges Council</a> and
-            <a href="http://www.knox.vic.gov.au">Knox City Council</a> for their
-            ongoing support to run CoderDojo from <a href="http://www.realm.vic.gov.au/">Realm</a>.
+        <p>
+            CoderDojo encourages and supports an environment called <a target="new" href="https://coderdojo.com/start-a-dojo/coderdojo-echo-ethos-culture-happiness-and-outcomes/">ECHO — Ethos, Culture, Happiness and Outcomes.</a>
+            The overarching rule at Coder Dojo for both attendees and volunteers is <strong>be cool, learn together and have fun</strong>.
+        </p>
+        <h3>Parents</h3>
+        <p>
+            <strong>Parents of children under 12 are required to stay for the session</strong>, and other parents are
+            welcome to stay. By staying, parents can better understand their child's work and help their child to take home their projects
+            to support their hobby at home.
+        </p><p>
+            Don't worry, it's not boring, you don't have to "know computers", and you'll learn something too!
+            In fact, we've found parents can be a great help in the dojo, and we will make you very welcome and
+            encourage you to get involved.
+        </p>
+        <h3>Technology</h3>
+        <p>
+            <strong>Bring your own computer or tablet if you have one</strong>.
+            Realm has kindly donated some technology and facilities to the dojo but we do not have enough to go around,
+            plus there is a massive benefit to using your own technology &mdash; by taking your hobby home, you get to learn
+            and practice and become a better coder.
+        </p>
 
         <h3>Mentors</h3>
         <p>
-            A CoderDojo Mentor is a technically skilled person who guides dojo ninjas
-            in their learning and project work. As a mentor, their aim is to facilitate
-            learning, rather than teaching in a top-down fashion.
+            A CoderDojo Mentor guides dojo ninjas in their learning and project work. Mentors are not teachers,
+            and CoderDojo is not a classroom. Mentors, help facilitate self-learning, research and problem solving.
         </p><p>
             Mentors will focus on the ninjas' specific projects, but their
             aims are to develop independent research and self-learning skills rather
@@ -94,7 +104,7 @@
             for help, an to help others when they know something.
 
         </p><p>
-            An important principle of the dojo is that we all learn together — 
+            An important principle of the dojo is that we all learn together &mdash;
             <strong>age is not an indicator of experience</strong>, and it's quite possible that
             a ninja knows more than a mentors on a particular topic.  We are all openly learning
             together in this fast-paced environment of Information Technology, and mastery of
@@ -104,14 +114,17 @@
             <p>If you'd like volunteer as a technical mentor or a non-technical volunteer, then we'd love to talk — <a href="contact.html">get in touch</a>!</p>
         </div>
 
+        <h3>Our supporters</h3>
+        <p>Thanks to the kind support of
+            <a href="http://www.erl.vic.gov.au">Eastern Regional Libraries</a>,
+            <a href="http://www.maroondah.vic.gov.au">Maroondah City Council</a>,
+            <a href="http://www.yarraranges.vic.gov.au">Yarra Ranges Council</a> and
+            <a href="http://www.knox.vic.gov.au">Knox City Council</a> for their
+            ongoing support to run CoderDojo from <a href="http://www.realm.vic.gov.au/">Realm</a>.
 
-        <h3>Ethos</h3>
+
         <p>
-            CoderDojo encourages and supports an environment called <a href="https://coderdojo.com/start-a-dojo/coderdojo-echo-ethos-culture-happiness-and-outcomes/">ECHO — Ethos, Culture, Happiness and Outcomes.</a>
-        </p><p>
-            The overarching rule at Coder Dojo for both attendees and volunteers is <strong>be cool, learn together and have fun</strong>.
-        </p><p>
-            Coding is a really rewarding experience and lots of fun.
+            Coding is a really rewarding experience and lots of fun, and we look forward to helping you learn and have fun with us.
         </p>
 
     </div>
